double scrollbars fix;
closes #128

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,6 +27,11 @@
     transform: translateX(-100%);
 }
 
+#customize-theme-controls .customize-pane-child.accordion-section-content,
+#customize-theme-controls .customize-pane-child.accordion-sub-container {
+    overflow: hidden !important;
+}
+
 .epsilon-hidden {
     opacity: 0;
     visibility: hidden;
